--- a/src/assets/styles/scss/main.scss
+++ b/src/assets/styles/scss/main.scss
@@ -13,6 +13,7 @@
 @import "./components/footer.scss";
 @import "./components/tag.scss";
 @import "./components/accordion.scss";
+@import "./components/slider.scss";
 
 // LAYOUT
 @import "./layout/results.scss";
