--- a/src/assets/styles/scss/components/_slider.scss
+++ b/src/assets/styles/scss/components/_slider.scss
@@ -3,20 +3,36 @@
         width: 1240px;
         overflow: hidden;
         max-width: 100%;
-        aspect-ratio: 3;
+        height: 255px;
         position: relative;
+        border-radius: 10px;
+
+        @media screen and (min-width: 992px) {
+            border-radius: 25px;
+            height: 415px;
+        }
         svg {
             position: absolute;
             top: 50%;
             transform: translateY(-50%);
             z-index: 1;
             cursor: pointer;
+            width: 12px;
+            @media screen and (min-width: 992px) {
+                width: 46px;
+            }
         }
         .prev {
-            left: 25px;
+            left: 10px;
+            @media screen and (min-width: 992px) {
+                left: 25px;
+            }
         }
         .next {
-            right: 25px;
+            right: 10px;
+            @media screen and (min-width: 992px) {
+                right: 25px;
+            }
         }
     }
     &__slides {
@@ -30,10 +46,22 @@
         max-width: 100%;
         aspect-ratio: 3;
     }
-    .img-wrapper {}
     img {
         width: 100%;
         height: 100%;
         object-fit: cover;
+    }
+    p {
+        color: $color-002;
+        z-index: 1;
+        position: absolute;
+        left: 50%;
+        bottom: 25px;
+        transform: translateX(-50%);
+        display: none;
+        font-size: $font-lg;
+        @media screen and (min-width: 992px) {
+            display: block;
+        }
     }
 }
