--- a/src/assets/styles/scss/components/_preview.scss
+++ b/src/assets/styles/scss/components/_preview.scss
@@ -10,11 +10,13 @@
 
     @media screen and (min-width: 768px) {
         aspect-ratio: 1;
-        // margin: 25px;
     }
 
     &:hover {
-        box-shadow: 5px 5px 5px rgba($color: $color-004, $alpha: 0.5);
+
+        img {
+            transform: scale(1.2);
+        }
     }
 
     a {
@@ -24,16 +26,19 @@
     .img-wrapper {
         width: 100%;
         height: 100%;
+
         &__overlay {
             display: flex;
             align-items: flex-end;
             padding: 20px;
             background: linear-gradient(rgba($color-004, 0), rgba($color-004, 0.5));
         }
+
         img {
             width: 100%;
             height: 100%;
             object-fit: cover;
+            transition: transform 0.4s ease-in-out;
         }
     }
 
