--- a/src/assets/styles/scss/utils/_variables.scss
+++ b/src/assets/styles/scss/utils/_variables.scss
@@ -10,6 +10,7 @@ $font-002: 'Montserrat-Regular';
 $font-003: 'Montserrat-Bold';
 
 // FONT-SIZES
+$font-xxs: 10px;
 $font-xs: 12px;
 $font-xsm: 13px;
 $font-sm: 14px;
