--- a/src/assets/styles/scss/components/_preview.scss
+++ b/src/assets/styles/scss/components/_preview.scss
@@ -1,5 +1,5 @@
 .preview {
-    width: 340px;
+    
     aspect-ratio: 1.3;
     background-color: $color-001;
     border-radius: 10px;
@@ -7,6 +7,10 @@
     margin: 0 auto 20px;
     max-width: 100%;
     transition: all 0.2s ease-in-out;
+
+    @media screen and (min-width: 576px) {
+        width: 340px;
+    }
 
     @media screen and (min-width: 768px) {
         aspect-ratio: 1;
