--- a/src/assets/styles/scss/pages/_product.scss
+++ b/src/assets/styles/scss/pages/_product.scss
@@ -11,13 +11,18 @@
             justify-content: space-between;
         }
         &--column {
+            p {
+                color: $color-004;
+            }
             &:nth-child(2) {
                 display: flex;
                 align-items: center;
+                justify-content: space-between;
                 flex-direction: row-reverse;
                 @media screen and (min-width: 768px) {
                     flex-direction: column;
                     align-items: flex-end;
+                    justify-content: flex-start;
                 }
             }
         }
